--- a/package.json
+++ b/package.json
@@ -9,22 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/plugin-transform-async-generator-functions": "^7.23.4",
+    "@babel/plugin-transform-class-properties": "^7.23.3",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.4",
+    "@babel/plugin-transform-object-rest-spread": "^7.23.4",
+    "@babel/plugin-transform-optional-catch-binding": "^7.23.4",
+    "@babel/plugin-transform-optional-chaining": "^7.23.4",
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-community/google-signin": "^5.0.0",
     "@react-native-firebase/app": "^18.7.1",
     "@react-native-firebase/auth": "^18.7.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "expo": "^49.0.0",
     "expo-google-app-auth": "~8.3.0",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.17",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.7",
-    "react-native-web": "~0.19.6"
+    "react-native": "0.72.6",
+    "react-native-web": "~0.19.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "expo": "^49.0.21"
   },
   "private": true
 }
